# moiraweave

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  live-agent-integrations.yml  publish.yml  release.yml
examples/workloads/: README.md
examples/workloads/external-hermes/: workload.yaml
examples/workloads/hermes/: workload.yaml
examples/workloads/openclaw/: workload.yaml
infra/helm/moiraweave/: values-prod.yaml  values-staging.yaml  values.yaml
infra/k8s/external-secrets/: externalsecret-moiraweave.yaml
services/api-gateway/: .env.example  Dockerfile  pyproject.toml
services/model-sdk/: pyproject.toml
services/shared/: pyproject.toml
services/shared/moiraweave_shared/: alembic_runner.py  control_plane.py  schemas.py  streams.py  workloads.py
services/shared/moiraweave_shared/alembic/: README.md  __init__.py  control_plane_schema.py  env.py  script.py.mako
services/shared/moiraweave_shared/alembic/versions/: 20260612_0001_control_plane_baseline.py  __init__.py
services/worker/: .env.example  Dockerfile  pyproject.toml
tests/e2e/: conftest.py  docker-compose.e2e.yml  test_kind_controller_smoke.py  test_pipeline_flow.py
tests/helm/: values-deployment-controller.yaml  values-workloads.yaml
tests/integration/: test_constants_alignment.py  test_control_plane_migrations.py  test_control_plane_postgres_migrations.py  test_example_workloads.py  test_helm_workload_templates.py  test_observability_linkage.py  test_workload_contracts.py
(+49 files in other folders)
