[project]
name = "moiraweave-shared"
version = "0.2.0"
description = "Shared constants and schemas for MoiraWeave services"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "SQLAlchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moiraweave_shared"]
